added nickname list

--- a/yoko.html
+++ b/yoko.html
@@ -2,5 +2,5 @@
 <html lang="en US"
 <head>
 <title>This is our dog Yoko!</title>
-  <img src="c:\Users\ambi\Desktop\New folder\yoko.jpg" alt="Photo of Yoko" width="800" height="600"
+  <img src="c:\Users\ambi\Desktop\New folder\yoko.jpg" alt="Photo of Yoko" width="800" height="auto"
 </head>
