--- a/yoko.html
+++ b/yoko.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en US"
 <head>
-<title>This is our dog Yoko!</title>
-  <img src="c:\Users\ambi\Desktop\New folder\yoko.jpg" alt="Photo of Yoko" width="800" height="auto"
+<body>
+  <title>Yoko!</title>
+  <h1>This is our dog Yoko</h1>
+  <img src="c:\Users\ambi\Desktop\New folder\yoko.jpg" alt="Photo of Yoko" width="400" height="auto"
 </head>
+  <h2>She goes by many names!</h2>
+    <ul>
+      <li>Chunky</li>
+      <li>Chunkita</li>
+      <li>Mama Chunk</li>
+      <li>Yokita</li>
+    </ul>
+  <p>As You can see she goes by many names.</p>
+
+</head>
+</body>
+</html>
