--- a/yoko.html
+++ b/yoko.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en US"
-
+<html lang="en US">
 <head>
   <title>Yoko!</title>
 </head>
 <body>
-  
   <h1>This is our dog Yoko</h1>
-  <img src="c:\Users\ambi\Desktop\New folder\yoko.jpg" alt="Photo of Yoko" width="400" height="auto"
+  <img src="c:\Users\ambi\Desktop\New folder\yoko.jpg" alt="Photo of Yoko" width="400" height="auto">
 
-  <h2>She goes by many names!</h2>
+<h1>She goes by many names!</h1>
     <ul>
       <li>Chunky</li>
       <li>Chunkita</li>
