--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>This is our dog Yoko</h1>
-  <img src="c:\Users\ambi\Desktop\New folder\yoko.jpg" alt="Photo of Yoko" width="400" height="auto">
+  <img src="yoko.jpg" alt="Photo of Yoko" width="400" height="auto">
 
 <h1>She goes by many names!</h1>
     <ul>
